// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders route "/" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "gap": "20px",
        "justifyContent": "center",
        "margin": "auto",
        "maxWidth": "1200px",
      }
    }
  >
    <a
      href="/roulette"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Roulette"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Roulette
        </div>
      </div>
    </a>
    <a
      href="/new-roulette"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for New Roulette"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          New Roulette
        </div>
      </div>
    </a>
    <a
      href="/sic-bo"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Sic Bo"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Sic Bo
        </div>
      </div>
    </a>
    <a
      href="/three-card-poker"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Three Card Poker"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Three Card Poker
        </div>
      </div>
    </a>
    <a
      href="/chuck-a-luck"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Chuck-A-Luck"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Chuck-A-Luck
        </div>
      </div>
    </a>
    <a
      href="/blackjack"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Blackjack"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Blackjack
        </div>
      </div>
    </a>
    <a
      href="/big-six"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Big Six"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Big Six
        </div>
      </div>
    </a>
    <a
      href="/keno"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Keno"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Keno
        </div>
      </div>
    </a>
    <a
      href="/basic-slots"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Basic Slots"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Basic Slots
        </div>
      </div>
    </a>
    <a
      href="/advanced-slots"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Advanced Slots"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Advanced Slots
        </div>
      </div>
    </a>
    <a
      href="/baccarat"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Baccarat"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Baccarat
        </div>
      </div>
    </a>
    <a
      href="/space-poker"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Space Poker"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Space Poker
        </div>
      </div>
    </a>
    <a
      href="/diamond-miner"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Diamond Miner"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Diamond Miner
        </div>
      </div>
    </a>
    <a
      href="/gift-tree"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Gift Tree"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Gift Tree
        </div>
      </div>
    </a>
    <a
      href="/coin-flip"
      onClick={[Function]}
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "4px black solid",
            "borderRadius": 16,
            "boxShadow": "4px 6px 0px 0px #000000",
            "cursor": "pointer",
            "height": 252,
            "opacity": 1,
            "pointerEvents": "auto",
            "position": "relative",
            "width": 256,
          }
        }
      >
        <img
          alt="placeholder for Coin Flip"
          src="https://placehold.co/220x140"
          style={
            Object {
              "border": "4px black solid",
              "borderRadius": 12,
              "height": 140,
              "left": 14,
              "position": "absolute",
              "top": 14,
              "width": 220,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": 30,
              "color": "black",
              "fontFamily": "Lexend Mega",
              "fontSize": "16px",
              "fontWeight": "700",
              "height": 40,
              "lineHeight": "40px",
              "position": "absolute",
              "textAlign": "center",
              "width": 256,
              "wordWrap": "break-word",
            }
          }
        >
          Coin Flip
        </div>
      </div>
    </a>
  </div>,
]
`;

exports[`App renders route "/baccarat" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    BACCARAT
  </div>,
]
`;

exports[`App renders route "/balances" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    className="Balances-component"
  >
    <div>
      <div>
        hash: undefined
      </div>
      <div>
        number: undefined
      </div>
      <div>
        timestamp: undefined
      </div>
    </div>
    <div>
      <table
        className="balances-table"
      >
        <thead>
          <tr
            className="balances-table-headers"
          >
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
              Nickname
            </th>
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
              Address
            </th>
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
              ETH Balance
            </th>
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
               Balance
            </th>
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
               Allowance
            </th>
            <th
              style={
                Object {
                  "width": "10%",
                }
              }
            >
              ✅ Sets
            </th>
            <th
              style={
                Object {
                  "width": "16%",
                }
              }
            >
              Current Set
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
]
`;

exports[`App renders route "/blackjack" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    BLACKJACK
  </div>,
]
`;

exports[`App renders route "/chuck-a-luck" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    CHUCK-A-LUCK
  </div>,
]
`;

exports[`App renders route "/coin-flip" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    COIN FLIP
  </div>,
]
`;

exports[`App renders route "/diamond-miner" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    DIAMOND MINER
  </div>,
]
`;

exports[`App renders route "/gift-tree" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    GIFT TREE
  </div>,
]
`;

exports[`App renders route "/keno" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    KENO
  </div>,
]
`;

exports[`App renders route "/new-roulette" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    NEW ROULETTE
  </div>,
]
`;

exports[`App renders route "/roulette" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    className="Roulette-component"
  >
    <div
      className="Board-component"
    >
      <div
        className="ClickableBet-component"
        id="StraightUp_1"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 80,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            1
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_4"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 160,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            4
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_7"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 240,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            7
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_10"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 320,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            10
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_13"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 400,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            13
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_16"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 480,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            16
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_19"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 560,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            19
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_22"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 640,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            22
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_25"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 720,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            25
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_28"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 800,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            28
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_31"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 880,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            31
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_34"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 960,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            34
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_2"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 80,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            2
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_5"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 160,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            5
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_8"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 240,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            8
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_11"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 320,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            11
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_14"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 400,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            14
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_17"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 480,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            17
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_20"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 560,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            20
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_23"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 640,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            23
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_26"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 720,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            26
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_29"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 800,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            29
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_32"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 880,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            32
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_35"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 960,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            35
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_3"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 80,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            3
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_6"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 160,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            6
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_9"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 240,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            9
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_12"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 320,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            12
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_15"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 400,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            15
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_18"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 480,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            18
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_21"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 560,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            21
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_24"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 640,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            24
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_27"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 720,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            27
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_30"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 800,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            30
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_33"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 880,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            33
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_36"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 960,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label straightUp1to36-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            36
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_0"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 179,
            "left": 0,
            "top": 180,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label zero-square-label"
            style={
              Object {
                "backgroundColor": "#016D29",
              }
            }
          >
            0
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="StraightUp_00"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 179,
            "left": 0,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label zero-square-label"
            style={
              Object {
                "backgroundColor": "#016D29",
              }
            }
          >
            00
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="1st 12"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 80,
            "top": 360,
            "width": 319,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label dozens-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            1st 12
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="2nd 12"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 400,
            "top": 360,
            "width": 319,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label dozens-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            2nd 12
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="3rd 12"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 720,
            "top": 360,
            "width": 319,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label dozens-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            3rd 12
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="1st Column"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 1040,
            "top": 240,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label column-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            2 to 1
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="2nd Column"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 1040,
            "top": 120,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label column-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            2 to 1
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="3rd Column"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 119,
            "left": 1040,
            "top": 0,
            "width": 79,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label column-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            2 to 1
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="1 to 18"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 80,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            1 to 18
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="Even"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 240,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            Even
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="Red"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 400,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-colors-square-label"
            style={
              Object {
                "backgroundColor": "#d94848",
              }
            }
          >
            Red
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="Black"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 560,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-colors-square-label"
            style={
              Object {
                "backgroundColor": "#222222",
              }
            }
          >
            Black
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="Odd"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 720,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            Odd
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
      <div
        className="ClickableBet-component"
        id="19 to 36"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "height": 79,
            "left": 880,
            "top": 440,
            "width": 159,
          }
        }
      >
        <div
          className="betting-square-contents"
        >
          <div
            className="betting-square-label halves-square-label"
            style={
              Object {
                "backgroundColor": "inherit",
              }
            }
          >
            19 to 36
          </div>
          <div
            className="Chip-component betting-square-chip"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            $0
          </div>
        </div>
      </div>
    </div>
    <div
      className="ChipSelection-component"
    >
      <div
        className="Chip-component chip-selection-chip"
        id="chip-1"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#DFDFDF",
            "borderColor": "#000000",
            "boxShadow": "0px 16px 10px 1px rgba(0, 0, 0, 0.6)",
            "color": "#000000",
            "marginTop": "12px",
          }
        }
      >
        $1
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-2.5"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#FFC0CB",
            "borderColor": "#000000",
            "color": "#000000",
          }
        }
      >
        $2.5
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-5"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#D94848",
            "borderColor": "#000000",
            "color": "#FFFFFF",
          }
        }
      >
        $5
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-25"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#00B341",
            "borderColor": "#000000",
            "color": "#FFFFFF",
          }
        }
      >
        $25
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-100"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#222222",
            "borderColor": "#2A8A8A",
            "color": "#FFFFFF",
          }
        }
      >
        $100
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-500"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#663399",
            "borderColor": "#2A8A8A",
            "color": "#FFFFFF",
          }
        }
      >
        $500
      </div>
      <div
        className="Chip-component chip-selection-chip"
        id="chip-1000"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#F4F488",
            "borderColor": "#000000",
            "color": "#000000",
          }
        }
      >
        $1000
      </div>
    </div>
    <div
      className="SpinButton-component"
      id="spin-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        SPIN
      </span>
      <span
        className="place-a-bet-message"
        style={
          Object {
            "zIndex": -1,
          }
        }
      >
        -
      </span>
    </div>
    <div
      className="SpinResult-component"
    >
      <div
        className="spin-result-label"
        style={
          Object {
            "backgroundColor": "inherit",
          }
        }
      >
        -
      </div>
    </div>
    <div
      className="MostRecentSpinResults-component"
    >
      <ul />
    </div>
    <div
      className="PlayerInfo-component"
    >
      <div>
        Player Balance
        <br />
        Loading...
      </div>
      <div>
        Player Allowance
        <br />
        Loading...
      </div>
      <div>
        Current Bet
        <br />
        0
      </div>
    </div>
    <div
      className="PendingBetsTable-component"
    >
      <div
        className="pending-bets-info-table-title-text"
      >
        Pending Bets
      </div>
      <table
        className="pending-bets-info-table"
      >
        <tbody>
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              Bet Name
            </th>
            <th>
              Bet Amount
            </th>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="BetResultsInfo-component"
    >
      <div
        className="bet-info-table-title-container"
      >
        <div
          className="bet-info-table-title-text"
        >
          PREVIOUS ROUND RESULTS
        </div>
      </div>
      <table
        className="bet-results-info-table"
      >
        <tbody>
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              Bet Name
            </th>
            <th>
              Bet Amount
            </th>
            <th>
              Winnings
            </th>
            <th>
              Bet Returned
            </th>
          </tr>
          <tr
            style={
              Object {
                "height": "10px",
              }
            }
          />
          <tr>
            <td>
              TOTALS
            </td>
            <td>
              -
            </td>
            <td>
              -
            </td>
            <td>
              -
            </td>
          </tr>
          <tr
            style={
              Object {
                "height": "10px",
              }
            }
          />
          <tr
            className="balance-change-value"
          >
            <td>
              Starting
            </td>
            <td
              colSpan={3}
            >
              -
            </td>
          </tr>
          <tr
            className="balance-change-value"
          >
            <td>
              Net
            </td>
            <td
              colSpan={3}
            >
              -
            </td>
          </tr>
          <tr
            className="balance-change-value"
          >
            <td>
              Final
            </td>
            <td
              colSpan={3}
            >
              -
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="NumbersHitTracker-component"
    >
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        0
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        00
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        1
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        2
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        3
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        4
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        5
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        6
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        7
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        8
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        9
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        10
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        11
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        12
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        13
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        14
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        15
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        16
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        17
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        18
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        19
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        20
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        21
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        22
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        23
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        24
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        25
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        26
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        27
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        28
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        29
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        30
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        31
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        32
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        33
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        34
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        35
      </div>
      <div
        className="hit-number"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
      >
        36
      </div>
    </div>
    <div
      className="CompletionsCounter-component"
    >
      Loading...
    </div>
    <div
      className="HouseInfo-component"
    >
      <div>
        Block Height
        <br />
        0
      </div>
      <div>
        House Balance
        <br />
        Loading...
      </div>
    </div>
  </div>,
]
`;

exports[`App renders route "/sic-bo" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    SIC BO
  </div>,
]
`;

exports[`App renders route "/space-poker" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    SPACE POKER
  </div>,
]
`;

exports[`App renders route "/three-card-poker" 1`] = `
Array [
  <div
    className="NavigationBar-component"
  >
    <div
      className="NavigationBar-links"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/balances"
        onClick={[Function]}
      >
        Balances
      </a>
    </div>
  </div>,
  <div
    style={
      Object {
        "height": 1024,
        "outline": "1px solid red",
        "width": 1440,
      }
    }
  >
    THREE CARD POKER
  </div>,
]
`;
